add new html files and make css changes

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf=8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Day Planner</title>
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/static/style.css" />
@@ -27,6 +29,12 @@
             <a href="/settings">
               <span class="icon"><i class="fas fa-cog"></i></span>
               <span class="title">Calendar</span>
+            </a>
+          </li>
+          <li class="logout">
+            <a href="/logout">
+              <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
+              <span class="title">Logout</span>
             </a>
           </li>
         </ul>
