--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,45 @@
 {% extends 'layout.html' %}
 
-{% block main %}{% endblock %}
+{% block main %}
+    <form action="/register" method="post">
+
+    <!-- username -->
+    <div>
+        <input type="text" id="name" name="username" placeholder="Username" autocomplete="off" autofocus onkeyup="manage(this)"/>
+    </div>
+
+    <!-- password -->
+    <div>
+        <input type="password" id="pass" name="password" placeholder="Password" onkeyup="manage(this)"/>
+    </div>
+
+    <!-- confirmation -->
+    <div>
+        <input type="password" id="pass1" name="confirmation" placeholder="Confirm Password" onkeyup="manage(this)"/>
+    </div>
+
+    <!-- button -->
+    <button id="submit" type="submit" disabled>Register</button>
+
+    </form>
+
+    <script>
+        function manage(text) {
+            var btn = document.getElementById('submit');
+            var element = document.getElementsByTagName('input');
+
+            // Loop through each element.
+            for (i = 0; i < element.length; i++) {
+
+                // Check the element type.
+                if ((element[i].type == 'text' || element[i].type == 'password') && element[i].value == '') {
+                    btn.disabled = true;    // Disable the button.
+                    return false;
+                }
+                else {
+                    btn.disabled = false;   // Enable the button.
+                }
+            }
+        }
+    </script>
+{% endblock %}
