--- a/static/style.css
+++ b/static/style.css
@@ -76,6 +76,39 @@ body {
   white-space: nowrap;
 }
 
-.sidebar ul .logout {
-  bottom: -610px;
+.top-sidebar{
+  padding: 15px 30px;
+  display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  background-color: #121212;
+  font-size: 24px;
+  justify-content: space-between;
+}
+
+
+div button {
+  background-color: #bb86fc;
+  display: inline-block;
+  border: none;
+  border-radius: 5px;
+  color: #121212;
+  text-decoration: none;
+  font-family: "JetBrains Mono";
+  font-size: 20px;
+  padding: 10px 20px;
+  transition: 0.3s;
+}
+
+div button:hover{
+  background-color: #e9d8fe;
+}
+
+.register-btn {
+  background-color: #d9b9ff;
+  margin-right: 20px;
+}
+
+h1 {
+  color: #f5f5f5;
 }
