link backend and frontend partially

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,7 @@
             <li>
               <a href="/settings">
                 <span class="icon"><i class="fas fa-cog"></i></span>
-                <span class="title">Calendar</span>
+                <span class="title">Settings</span>
               </a>
             </li>
             <li class="logout">
