--- a/static/login.css
+++ b/static/login.css
@@ -1,15 +1,10 @@
-div{
+div {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 60px;
+    padding: 0px;
 }
 
-button {
-    display: flex;
-    border: none;
-    background-color: #bb86fc;
-    color: #121212;
-    justify-content: center;
-    align-items: center;
+.primary-inp {
+    padding: 50px;
 }
