add new css files

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,17 +5,17 @@
     <form action="/register" method="post">
 
         <!-- username -->
-        <div>
+        <div class="primary-inp">
             <input type="text" id="name" name="username" placeholder="Username" autocomplete="off" autofocus onkeyup="manage(this)"/>
         </div>
 
         <!-- password -->
-        <div>
+        <div class="primary-inp">
             <input type="password" id="pass" name="password" placeholder="Password" onkeyup="manage(this)"/>
         </div>
 
         <!-- confirmation -->
-        <div>
+        <div class="primary-inp">
             <input type="password" id="pass1" name="confirmation" placeholder="Confirm Password" onkeyup="manage(this)"/>
         </div>
 
