--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
             <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
         </div>
         <!-- password -->
-        <div>
+        <div class="primary-inp">
             <input name="password" placeholder="Password" type="password">
         </div>
         <!-- button -->
