--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,8 +15,8 @@
     <!-- Required to import fontawesome icons -->
     <script
       src="https://kit.fontawesome.com/c20afc23a5.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
   </head>
 
   <body>
