--- a/templates/login.html
+++ b/templates/login.html
@@ -4,39 +4,27 @@
 
 {% block main %} 
 
+    <div>
+        <h1>Login Form</h1>
+    </div>
+
     <form class="login-form" action="/login" method="post">
+
         <!-- username -->
-        <div class="primary-inp">
-            <input autocomplete="off" autofocus name="username" placeholder="Username" type="text">
+        <div>
+            <input autocomplete="off" name="username" placeholder="Username" type="text" autocomplete="off" autofocus onkeyup="manage(this)">
         </div>
+
         <!-- password -->
-        <div class="primary-inp">
-            <input name="password" placeholder="Password" type="password">
+        <div>
+            <input name="password" placeholder="Password" type="password" autofocus onkeyup="manage(this)">
         </div>
+
         <!-- button -->
         <div>
             <button id="submit" type="submit">Login</button>
         </div>
+
     </form>
-
-    <script>
-        function manage(text) {
-            var btn = document.getElementById('submit');
-            var element = document.getElementsByTagName('input');
-
-            // Loop through each element.
-            for (i = 0; i < element.length; i++) {
-
-                // Check the element type.
-                if ((element[i].type == 'text' || element[i].type == 'password') && element[i].value == '') {
-                    btn.disabled = true;    // Disable the button.
-                    return false;
-                }
-                else {
-                    btn.disabled = false;   // Enable the button.
-                }
-            }
-        }
-    </script>
 
 {% endblock %}
