add new file structure and js file

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 
     <title>Day Planner</title>
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="/static/style.css"/>
+    <link rel="stylesheet" href="/static/css/style.css"/>
     {% block stylesheet %} {% endblock %}
 
     <!-- Required to import fontawesome icons -->
