--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block stylesheet %}  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='settings.css')}}"/> {% endblock %}
+{% block stylesheet %}  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/settings.css')}}"/> {% endblock %}
 
 {% block main %}
     <div>
