--- a/static/css/tasks.css
+++ b/static/css/tasks.css
@@ -33,6 +33,13 @@
     height: 100%;
     font-size: 18px;
     margin-left: 5px;
+    opacity: 0.6;
+    pointer-events: none;
+}
+
+.input-field button.active {
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .tasks-main .list-items {
