--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block stylesheet %}  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='register.css')}}"/> {% endblock %}
+{% block stylesheet %}  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/register.css')}}"/> {% endblock %}
 
 {% block main %}
 
