--- a/templates/login.html
+++ b/templates/login.html
@@ -12,12 +12,12 @@
 
         <!-- username -->
         <div>
-            <input autocomplete="off" name="username" placeholder="Username" type="text" autocomplete="off" autofocus onkeyup="manage(this)">
+            <input autocomplete="off" name="username" placeholder="Username" type="text" autocomplete="off" autofocus/>
         </div>
 
         <!-- password -->
         <div>
-            <input name="password" placeholder="Password" type="password" autofocus onkeyup="manage(this)">
+            <input name="password" placeholder="Password" type="password" autofocus/>
         </div>
 
         <!-- button -->
