--- a/templates/register.html
+++ b/templates/register.html
@@ -12,22 +12,22 @@
 
         <!-- username -->
         <div>
-            <input type="text" id="name" name="username" placeholder="Username" autocomplete="off" autofocus onkeyup="manage(this)"/>
+            <input type="text" id="name" name="username" placeholder="Username" autocomplete="off" autofocus/>
         </div>
 
         <!-- password -->
         <div>
-            <input type="password" id="pass" name="password" placeholder="Password" onkeyup="manage(this)"/>
+            <input type="password" id="pass" name="password" placeholder="Password"/>
         </div>
 
         <!-- confirmation -->
         <div>
-            <input type="password" id="pass1" name="confirmation" placeholder="Confirm Password" onkeyup="manage(this)"/>
+            <input type="password" id="pass1" name="confirmation" placeholder="Confirm Password"/>
         </div>
 
         <!-- button -->
         <div>
-            <button id="submit" type="submit" disabled>Register</button>
+            <button id="submit" type="submit">Register</button>
         </div>
 
     </form>
