--- a/templates/settings.html
+++ b/templates/settings.html
@@ -10,17 +10,17 @@
     <form action="/settings" method="post">
         <!-- Old Password -->
         <div>
-            <input type="password" id="oldpass" name="old" placeholder="Old Password" autocomplete="off" autofocus onkeyup="manage(this)"/>
+            <input type="password" id="oldpass" name="old" placeholder="Old Password" autocomplete="off" autofocus/>
         </div>
 
         <!-- New Password -->
         <div>
-            <input type="password" id="pass" name="new" placeholder="New Password" onkeyup="manage(this)"/>
+            <input type="password" id="pass" name="new" placeholder="New Password"/>
         </div>
 
         <!-- Confirm Password -->
         <div>
-            <input type="password" id="pass1" name="confirmation" placeholder="Confirm Password" onkeyup="manage(this)"/>
+            <input type="password" id="pass1" name="confirmation" placeholder="Confirm Password"/>
         </div>
 
         <!-- Button -->
