--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,53 @@
-{% extends 'layout.html' %} 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf=8" />
+    <metaname ="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/css/style.css" />
+    <title>Login</title>
+  </head>
 
-{% block stylesheet %}  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/login.css')}}"/> {% endblock %}
+  <body>
+    <nav class="top-navbar">
+      <div class="brand-title">DAY PLANNER</div>
+      <div class="top-navbar-links">
+        <ul>
+          <li><a href="#">Register</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </div>
+    </nav>
 
-{% block main %} 
+    <main class="main-section">
+      <div class="page-header">Login</div>
 
-    <div>
-        <h1>Login</h1>
-    </div>
-
-    <form class="login-form" action="/login" method="post">
-
+      <form class="login-form" action="/login" method="post">
         <!-- username -->
         <div>
-            <input autocomplete="off" name="username" placeholder="Username" type="text" autocomplete="off" autofocus/>
+          <input
+            autocomplete="off"
+            name="username"
+            placeholder="Username"
+            type="text"
+            autocomplete="off"
+            autofocus
+          />
         </div>
-
         <!-- password -->
         <div>
-            <input name="password" placeholder="Password" type="password" autofocus/>
+          <input
+            name="password"
+            placeholder="Password"
+            type="password"
+            autofocus
+          />
         </div>
 
         <!-- button -->
-        <div>
-            <button id="submit" type="submit">Login</button>
+        <div class="submit-button">
+          <button id="submit" type="submit">Login</button>
         </div>
-
-    </form>
-
-{% endblock %}
+      </form>
+    </main>
+  </body>
+</html>
