--- a/templates/register.html
+++ b/templates/register.html
@@ -12,8 +12,8 @@
       <div class="brand-title">DAY PLANNER</div>
       <div class="top-navbar-links">
         <ul>
-          <li><a href="#">Register</a></li>
-          <li><a href="#">Sign In</a></li>
+          <li><a href="/register">Register</a></li>
+          <li><a href="/login">Sign In</a></li>
         </ul>
       </div>
     </nav>
