design changes to tasks and created one-to-many db

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -37,9 +37,9 @@
       </ul>
     </nav>
 
-    <main>
+    <main class="main-section">
         <div class="tasks-main">
-            <h1 class="tasks-header">Tasks</h1>
+            <div>Tasks</div>
             <form action="/add" method="post">
                 <div class="input-field">
                     <input type="text" name="title" placeholder="Add your task"></input>
